Fixes #1410
Fixes the horizontal scrolling of the page when scrolled and mouse navigating or keyboard navigating to a drop down.

--- a/sass/chosen.scss
+++ b/sass/chosen.scss
@@ -17,7 +17,7 @@ $chosen-sprite-retina: image-url('chosen-sprite@2x.png') !default;
   .chosen-drop {
     position: absolute;
     top: 100%;
-    left: -9999px;
+    height: 0;
     z-index: 1010;
     @include box-sizing(border-box);
     width: 100%;
@@ -27,7 +27,7 @@ $chosen-sprite-retina: image-url('chosen-sprite@2x.png') !default;
     box-shadow: 0 4px 5px rgba(#000,.15);
   }
   &.chosen-with-drop .chosen-drop {
-    left: 0;
+    height: auto;
   }
   a{
     cursor: pointer;
@@ -126,7 +126,9 @@ $chosen-sprite-retina: image-url('chosen-sprite@2x.png') !default;
   }
   &.chosen-container-single-nosearch .chosen-search {
     position: absolute;
-    left: -9999px;
+    height: 0;
+    overflow: hidden;
+    padding: 0;
   }
 }
 /* @end */
